--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -918,6 +918,34 @@ p {
 
 
 
+.circlimg {
+  animation-name: circlimg;
+  animation-duration: 3000ms;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+}
+@keyframes circlimg {
+  0% {
+    transform: scale(0.9);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(0.9);
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
 
 @media (max-width: 991.9px) {
   .mobileView {
